--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -22,6 +22,17 @@
     border-radius: 20px;
 }
 
+.sidebar__searchContainer > input{
+
+    border: none;
+    margin-left: 10px;
+}
+
+.sidebar__searchContainer > .MuiSvgIcon-root{
+    color: gray;
+    padding: 10px;
+}
+
 .sidebar__header{
 
     display: flex;
