--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -22,17 +22,17 @@
     height: 35px;
     border-radius: 20px;
 }
+.sidebar__searchContainer > .MuiSvgIcon-root{
+    color: gray;
+    padding: 10px;
+}
 
 .sidebar__searchContainer > input{
-
     border: none;
     margin-left: 10px;
 }
 
-.sidebar__searchContainer > .MuiSvgIcon-root{
-    color: gray;
-    padding: 10px !important;
-}
+
 
 /* Sidebar Header */
 .sidebar__header{
