--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -33,5 +33,22 @@
     min-width: 100px;
 }
 .chat__body{
+    flex: 1;
     background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
+
+    background-repeat: repeat;
+    background-position: center;
+    padding: 30px;
+    overflow:scroll;
+
+}
+
+.chat__message{
+    position: relative;
+    font-size: 16px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 10px;
+    width: fit-content;
+
 }
