--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -21,3 +21,9 @@ box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),0 1px;
     height: 250px;
     margin-bottom: 40px;
 }
+.login__container > button{
+    margin-top: 50px;
+    text-transform: inherit !important;
+    background-color: #0a8d48;
+    color: white;
+}
